Fix sidebar spacing and width

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 300px 1fr;
     grid-template-rows: 17vh 83vh;    
 }
 
@@ -37,18 +37,13 @@ body {
     font-size: large;
 }
 
-#upload {
-    --margin: 10px;
-    margin-left: var(--margin);
-    margin-right: var(--margin);
-}
 
 button {
     padding: 5px 15px;
     background-color: #172554;
     color: white;
     border-radius: 25px;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 li {
@@ -59,16 +54,29 @@ li {
 }
 
 .sidebar {
-    background-color: #172554;
+    background-color: #5074eb;
     color: white;
     grid-column: 1;
     grid-row: 1 / -1;
     display: grid;    
     align-content: start;
+    width: 300px;
 }
 
-.sidebar h1 {
-    text-align: center;
+.title-box {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+    justify-content: start;
+    margin-bottom: 2rem;
+}
+
+.sidebar-title {
+    display: inline;
+}
+
+.meds {
+    display: inline;
 }
 
 .nav {
